# datalit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  regression.yml
.github/workflows/: ci.yaml
datalit/: Cargo.toml
datalit-macros/: Cargo.toml  README.md
datalit-macros-internals/: Cargo.toml
datalit-macros-internals/src/: lib.rs  state.rs  to_bytes.rs
datalit-macros-internals/src/entry/: block.rs  labeled.rs  literal.rs  mode_change.rs  repeat.rs  sequence.rs
datalit-macros-internals/src/entry/call/: functions.rs
datalit-macros-internals/src/parse/: base.rs  mod.rs
datalit-macros-internals/src/state/: support.rs
datalit-macros/src/: entry.rs  lib.rs  state.rs  to_bytes.rs
datalit-macros/src/entry/: block.rs  call.rs  labeled.rs  literal.rs  mode_change.rs  sequence.rs
datalit-macros/src/entry/call/: directives.rs  functions.rs
datalit-macros/src/parse/: base.rs
datalit-macros/src/state/: support.rs
datalit/docs/: .markdownlint.json  datalit.md  lib.md
datalit/src/: lib.rs
private/: README.md
private/workspace-doc-test/: Cargo.toml
private/workspace-doc-test/src/: lib.rs
