[workspace]
resolver = "3"
members = ["datalit", "datalit-macros", "datalit-macros-internals"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha.1"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
datalit-macros = { version = "0.1.0-alpha.1", path = "datalit-macros" }
datalit-macros-internals = { version = "0.1.0-alpha.1", path = "datalit-macros-internals" }
