[workspace]
resolver = "3"
members = ["datalit", "datalit-macros", "datalit-macros-internals", "private/*"]

[workspace.package]
edition = "2024"
version = "0.1.0-alpha.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/naerbnic/datalit"
documentation = "https://docs.rs/datalit"
rust-version = "1.89"

[workspace.dependencies]
datalit = { version = "0.1.0-alpha.3", path = "datalit" }
datalit-macros = { version = "0.1.0-alpha.3", path = "datalit-macros" }
datalit-macros-internals = { version = "0.1.0-alpha.3", path = "datalit-macros-internals" }

[workspace.metadata.release]
shared-version = true
allow-branch = ["main"]
tag-name = "v{{version}}"
consolidate-commits = true
dependent-version = "upgrade"
