[package]
name = "datalit-macros-internals"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
derive-syn-parse = "0.2.0"
enum_dispatch = "0.3.13"
num = { version = "0.4.3", features = ["num-bigint"] }
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
thiserror = "2.0.16"
