[package]
name = "datalit-macros-internals"
description = "Internals for the datalit crate"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[dependencies]
derive-syn-parse = "0.2.0"
num = { version = "0.4.3", features = ["num-bigint"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
thiserror = "2.0.16"
