[package]
name = "datalit-macros"
version = "0.1.0-prerelease"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.2.0"
enum_dispatch = "0.3.13"
num = { version = "0.4.3", features = ["num-bigint"] }
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = "2.0.106"
thiserror = "2.0.16"
