[package]
name = "datalit-macros"
description = "Internals for the datalit crate"
license.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
datalit-macros-internals = { workspace = true }
